Fixed contact part

--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,15 @@
     <!--=============== Boxicons ===============-->
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
-
+    
   </head>
   <body>
     <div id="root"></div>
 
     <!--=============== Font Awesome ===============-->
     <script src="https://kit.fontawesome.com/4968493bad.js" crossorigin="anonymous"></script>
+
+    <!--=============== SMTP ===============-->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
   </body>
 </html>
